# easylocai

./: .gitignore  CLAUDE.md  LICENSE  README.md  client.py  custom_server.py  easylocai  install.sh  main.py  mcp_server_config.json  planning_assistant_test.py  pyproject.toml  run.py  run_beta.py  run_old.py  uninstall.sh
.claude/: settings.json
.claude/agents/: prompt-optimizer.md
.claude/hooks/: check_no_multiline_python_c.sh
.claude/superpowers/: GUIDE.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  PRODUCTION.md  REQUIREMENTS.md
easylocai/: main.py  main_beta.py  main_contextimprove.py  run.py  run_beta.py  workflow.py  workflow_beta.py  workflow_contextimprove.py
easylocai/agents/: answer_agent.py  next_plan_agent.py  plan_agent.py  plan_agent_beta.py  plan_agent_contextimprove.py  reasoning_agent.py  replan_agent.py  replan_agent_beta.py  replan_agent_contextimprove.py  single_task_agent.py  single_task_agent_beta.py  single_task_agent_contextimprove.py  single_task_agent_v2.py  tool_agent.py  tool_result_filter_agent.py  tool_select_agent.py
easylocai/constants/: model.py
easylocai/core/: agent.py  llm_call.py  search_engine.py  server.py  tool_manager.py
easylocai/llm_calls/: planner.py  query_normalizer.py  query_reformatter.py  reasoning.py  replanner.py  subtask_result_filter.py  task_executor.py  task_result_filter.py  task_router.py  tool_selector.py
easylocai/samples/: console_test.py
easylocai/schemas/: common.py  context.py
easylocai/search_engines/: advanced_search_engine.py  keyword_search_engine.py  semantic_search_engine.py
easylocai/utlis/: console_util.py  resource_util.py
prompt_eval/: plan_prompt_eval_v2.py  prompt_eval_workflow.py  query_reformatter_prompt_eval.py  reasoning_agent_eval.py  replan_prompt_eval.py  run.py  subtask_result_prompt_eval.py  task_result_filter_prompt_eval.py  task_result_prompt_eval.py  task_router_prompt_eval_v2.py  tool_select_prompt_eval.py  tool_select_prompt_eval_v2.py
prompt_eval/v2/: eval_workflow.py  plan_prompt_eval.py  planning_agent_eval.py  query_normalizer_prompt_eval.py  query_normalizer_prompt_eval_v2.py  query_reformatter_prompt_eval.py  reasoning_agent_eval.py  replan_prompt_eval.py  replan_prompt_eval_v2.py  replanning_agent_eval.py  single_task_agent_eval.py  task_result_prompt_eval.py  task_router_prompt_eval.py  tool_select_prompt_eval.py  tool_select_prompt_eval_v2.py
resources/prompt_eval/: plan_agent_inputs.json  plan_agent_inputs.jsonl  plan_agent_inputs_reasoning.jsonl  plan_prompt_inputs.json  query_normalizer_prompt_inputs.json  query_normalizer_prompt_inputs_v2.json  reasoning_prompt_inputs.json  replan_agent_inputs.json  replan_prompt_inputs.json  single_task_agent_inputs.json  subtask_result_prompt_inputs.json  task_result_prompt_inputs.json  tool_selector_prompt_inputs.json
resources/prompts/: answer_system_prompt.txt  (+32 more)
src/: config.py  run_beta.py
tests/: conftest.py
(+130 files in other folders)
