[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "chromadb>=1.0.15",
    "jinja2>=3.1.6",
    "mcp[cli]>=1.12.0",
    "ollama>=0.5.1",
    "prompt-toolkit>=3.0.52",
    "rich>=14.0.0",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
]
