[project]
name = "easylocai"
version = "0.1.0"
description = "Local AI CLI using local llm"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.10.1",
    "chromadb>=1.0.15",
    "jinja2>=3.1.6",
    "mcp[cli]>=1.12.0",
    "ollama>=0.5.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2,<3",
    "rich>=14.0.0",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
easylocai = "easylocai.run:run"

[tool.hatch.build.targets.wheel]
only-include = ["easylocai", "resources"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
