[project]
name = "easylocai"
version = "0.1.0"
description = "Local AI CLI using local llm gpt-oss:20b"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Yunhong Min", email = "yunhongmin00@gmail.com" }
]
keywords = ["ai", "cli", "llm", "local", "ollama", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "chromadb>=1.0.15",
    "jinja2>=3.1.6",
    "mcp[cli]>=1.12.0",
    "ollama>=0.5.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2,<3",
    "rank-bm25>=0.2.2",
    "rich>=14.0.0",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/fidemin/easylocai"
Repository = "https://github.com/fidemin/easylocai"
Issues = "https://github.com/fidemin/easylocai/issues"

[project.scripts]
easylocai = "easylocai.run:run"

[tool.hatch.build.targets.wheel]
only-include = ["easylocai", "resources"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
